<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingUpPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="64dp"
    sothree:umanoShadowHeight="4dp"
    app:umanoParallaxOffset="120dp"
    app:umanoScrollableView="@id/mainPlayer"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/navbarTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/menuBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:minWidth="34dp"
                    android:minHeight="34dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/menu_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:id="@+id/searchBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:layout_gravity="center_vertical"
                        android:minWidth="28dp"
                        android:minHeight="28dp"
                        android:contentDescription="@string/contentDescription"
                        android:src="@drawable/search_icon" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profileBtn"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="14dp">

                        <ImageView
                            android:id="@+id/profileIcon"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/contentDescription"
                            app:srcCompat="@mipmap/ic_launcher_round" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabIndicatorFullWidth="true"
                app:tabMode="scrollable"
                app:tabPaddingEnd="24dp"
                app:tabPaddingStart="24dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/songs" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlist" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artists" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres" />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/navbarTop"
            android:layout_marginTop="24dp">

        </androidx.viewpager2.widget.ViewPager2>
    </RelativeLayout>

    <include layout="@layout/main_player_layout" />

</com.sothree.slidinguppanel.SlidingUpPanelLayout>